# robotics_project

./: .gitattributes  .gitignore  README.md  README.md.save  README.md.save.1
docs/: README.md  (+44 more)
ros2_ws/src/safety_layer/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/safety_layer/config/: safety_limits.yaml
ros2_ws/src/safety_layer/launch/: safety_layer.launch.py  safety_monitor.launch.py
ros2_ws/src/safety_layer/safety_layer/: __init__.py  safety_monitor.py
ros2_ws/src/thesis_bringup/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/thesis_bringup/config/: contact_bridge.yaml  contact_validation_bridge.yaml  proposal_simulation_cell_v1_10.yaml  proposal_simulation_cell_v1_11.yaml  proposal_simulation_cell_v1_12.yaml  proposal_simulation_cell_v1_13.yaml  proposal_simulation_cell_v1_14.yaml  proposal_simulation_cell_v1_15.yaml  proposal_simulation_cell_v1_16.yaml  proposal_simulation_cell_v1_17.yaml  proposal_simulation_cell_v1_2.yaml  proposal_simulation_cell_v1_3.yaml  proposal_simulation_cell_v1_5.yaml  proposal_simulation_cell_v1_6.yaml  proposal_simulation_cell_v1_7.yaml  proposal_simulation_cell_v1_8.yaml  proposal_simulation_cell_v1_9.yaml  proposal_simulation_cell_v2_0.yaml  proposal_simulation_cell_v2_1.yaml  proposal_simulation_cell_v2_10.yaml  proposal_simulation_cell_v2_11.yaml  proposal_simulation_cell_v2_12.yaml  proposal_simulation_cell_v2_13.yaml  proposal_simulation_cell_v2_14.yaml  proposal_simulation_cell_v2_15.yaml  proposal_simulation_cell_v2_2.yaml  proposal_simulation_cell_v2_3.yaml  proposal_simulation_cell_v2_4.yaml  proposal_simulation_cell_v2_5.yaml  proposal_simulation_cell_v2_6.yaml  proposal_simulation_cell_v2_7.yaml  proposal_simulation_cell_v2_8.yaml  proposal_simulation_cell_v2_9.yaml  research_baseline.yaml
ros2_ws/src/thesis_bringup/launch/: proposal_simulation_cell_v1_0.launch.py  proposal_simulation_cell_v1_10_experiment_configuration_matrix.launch.py  proposal_simulation_cell_v1_11_single_scenario_loader_validation.launch.py  proposal_simulation_cell_v1_12_scenario_batch_selector.launch.py  proposal_simulation_cell_v1_13_batch_execution_plan_validator.launch.py  proposal_simulation_cell_v1_14_batch_dry_run_orchestrator.launch.py  proposal_simulation_cell_v1_15_evidence_package_generator.launch.py  proposal_simulation_cell_v1_16_reproducibility_checklist.launch.py  proposal_simulation_cell_v1_17_release_documentation_index.launch.py  proposal_simulation_cell_v1_1_sensor_and_scene_validation.launch.py  proposal_simulation_cell_v1_2_rgbd_image_bridge_fix.launch.py  proposal_simulation_cell_v1_5_safety_virtual_force_interface.launch.py  proposal_simulation_cell_v1_6_safety_gate_readiness.launch.py  proposal_simulation_cell_v1_7_pre_control_contract.launch.py  proposal_simulation_cell_v1_8_control_development_scaffold.launch.py  proposal_simulation_cell_v1_9_no_motion_control_law_dry_run.launch.py  proposal_simulation_cell_v2_0_first_gazebo_motion_smoke_test.launch.py  proposal_simulation_cell_v2_10_misalignment_contact_gate_batch_validation.launch.py  proposal_simulation_cell_v2_11_multimodal_contact_observation_logging.launch.py  proposal_simulation_cell_v2_12_context_vector_extraction.launch.py  proposal_simulation_cell_v2_13_context_encoder_prototype.launch.py  proposal_simulation_cell_v2_14_context_conditioned_guarded_action_validation.launch.py  proposal_simulation_cell_v2_15_context_action_ablation_validation.launch.py  proposal_simulation_cell_v2_1_gazebo_motion_validation_suite.launch.py  proposal_simulation_cell_v2_2_moveit_ik_diagnostic_validation.launch.py  proposal_simulation_cell_v2_3_moveit_model_alignment_and_plan_only_validation.launch.py  proposal_simulation_cell_v2_4_moveit_gazebo_execution_validation.launch.py  proposal_simulation_cell_v2_5_guarded_pre_contact_task_sequence.launch.py  proposal_simulation_cell_v2_6_contact_gated_guarded_approach_validation.launch.py  proposal_simulation_cell_v2_7_contact_triggered_guarded_touch_calibration.launch.py  proposal_simulation_cell_v2_8_contact_reachability_and_trigger_validation.launch.py  proposal_simulation_cell_v2_9_non_overlapping_approach_to_contact_validation.launch.py  research_baseline.launch.py  research_baseline_v2_4_experiment_runner.launch.py  run_contact_probe_validation_trial.launch.py  run_full_cartesian_insertion_diagnostics.launch.py  run_full_contact_validation_trial.launch.py  run_full_peg_hole_insertion_validation_trial.launch.py  run_full_robot_contact_validation_trial.launch.py  run_full_segmented_guarded_contact_trial.launch.py  (+4 more)
ros2_ws/src/thesis_bringup/thesis_bringup/: __init__.py  controller_readiness_gate.py  proposal_simulation_cell_monitor.py  proposal_simulation_cell_v1_10_experiment_matrix_node.py  proposal_simulation_cell_v1_11_single_scenario_loader_node.py  proposal_simulation_cell_v1_12_scenario_batch_selector_node.py  proposal_simulation_cell_v1_13_batch_execution_plan_node.py  proposal_simulation_cell_v1_14_batch_dry_run_orchestrator_node.py  proposal_simulation_cell_v1_15_evidence_package_node.py  proposal_simulation_cell_v1_16_reproducibility_checklist_node.py  proposal_simulation_cell_v1_17_release_index_node.py  proposal_simulation_cell_v1_1_validator.py  proposal_simulation_cell_v1_2_rgbd_validator.py  proposal_simulation_cell_v1_3_contact_validator.py  proposal_simulation_cell_v1_5_safety_virtual_force_node.py  proposal_simulation_cell_v1_6_readiness_gate_node.py  proposal_simulation_cell_v1_7_pre_control_contract_node.py  proposal_simulation_cell_v1_8_control_scaffold_node.py  proposal_simulation_cell_v1_9_control_law_dry_run_node.py  (+16 more)
(+1203 files in other folders)
