<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_layer</name>
  <version>0.1.0</version>
  <description>Safety filtering and constraint monitoring package for adaptive peg-in-hole control.</description>
  <maintainer email="omar.khedr@gu.edu.eg">Omar Khedr</maintainer>
  <license>Apache-2.0</license>

  <depend>diagnostic_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
