<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thesis_bringup</name>
  <version>0.1.0</version>
  <description>Top-level launch and configuration package for the safe adaptive KUKA peg-in-hole research framework.</description>
  <maintainer email="omar.khedr@gu.edu.eg">Omar Khedr</maintainer>
  <license>Apache-2.0</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>peg_in_hole_description</exec_depend>
  <exec_depend>kuka_gazebo</exec_depend>
  <exec_depend>kuka_task_control</exec_depend>
  <exec_depend>safety_layer</exec_depend>
  <exec_depend>experiment_manager</exec_depend>
  <exec_depend>peg_in_hole_metrics</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
